# FManager

./: CMakeLists.txt  Client.cpp  Config.cpp  FManager.cpp  FManager.hpp  MainPocket.cpp  MainPocket.hpp  README.md  Tasks.cpp  Tasks.hpp  main.cpp
